# haskell-dot-gif

./: CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  haskell-dot-gif.cabal  hie.yaml  shell.nix  square.txt  twocomps.txt
app/: Main.hs  MainDiagrams.hs  MainParallel.hs  MainSerial.hs
nix/: sources.json
src/: Exercises.hs  HaskellDotGif.hs
src/Control/: Logic.hs  Parallel.hs
src/Control/Logic/: Bridges.hs  DeadEnd.hs  NQueens.hs  Rainfall.hs
