cabal-version:       2.4
name:                haskell-dot-gif
version:             0.0.0.0
synopsis:            Este repositorio demuestra algunas técnicas para la animcaación usando Haskell y FRP
description:         Este repositorio demuestra algunas técnicas para la animcaación usando Haskell y FRP
homepage:            https://github.com/LuisChDev/haskell-dot-gif
bug-reports:         https://github.com/LuisChDev/haskell-dot-gif/issues
license:             MIT
license-file:        LICENSE
author:              Luis Chavarriaga
maintainer:          Luis Chavarriaga <luischa123@gmail.com>
copyright:           2021 Luis Chavarriaga
category:            Graphics
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/LuisChDev/haskell-dot-gif.git
common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude >= 0.7
                     , vector >= 0.12
                     , text >= 1.2
                     , Yampa >= 0.13
                     , colour >= 2.3
                     , containers >= 0.6
                     , diagrams >= 1.4
                     , diagrams-lib >= 1.4
                     , diagrams-cairo >= 1.4
                     , refined
                     , filepath >= 1.4
                     , parsec >= 3.1
                     , matrix
                     , fgl
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude,
                       Relude.Unsafe)

  default-extensions:  OverloadedStrings
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HaskellDotGif
                     , Control.Logic
                     , Control.Logic.Rainfall
                     , Control.Logic.Bridges
                     , Control.Logic.DeadEnd
                     , Exercises
executable haskell-dot-gif
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       haskell-dot-gif
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
test-suite haskell-dot-gif-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       haskell-dot-gif
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N